--- a/contact.html
+++ b/contact.html
@@ -3,23 +3,22 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 
-<html lang="en">
 <head>
 
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="On-site first aid training for students and employees. Training in Basic Life Support, CPR/AED, Pediatric First Aid, Bloodborne Pathogens, and Advance Cardiovascular Life Support; all levels of American Heart Association CPR Certifications.">
+	<meta name="keywords" content="first aid, first aid training, cpr, cpr course, cpr instruction, first aid instruction, pediatric, pediatric first aid, cpr training, aed, aed training, aed instruction" />
+	<meta name="author" content="Ian D. McCunn" />
+	<meta name="robots" content="nofollow" />
+
+	<link rel="stylesheet" type="text/css" href="stylesheets/general.css">
+	<link rel="shortcut icon" href="img/NWFAT_ico.ico" />
+
 	<title>NWFAT - Contact Page</title>
-
-	  <meta charset="utf-8">
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="On-site first aid training for students and employees. Training in Basic Life Support, CPR/AED, Pediatric First Aid, Bloodborne Pathogens, and Advance Cardiovascular Life Support; all levels of American Heart Association CPR Certifications.">
-		<meta name="keywords" content="first aid, first aid training, cpr, cpr course, cpr instruction, first aid instruction, pediatric, pediatric first aid, cpr training, aed, aed training, aed instruction" />
-		<meta name="author" content="Ian McCunn" />
-		<meta name="robots" content="nofollow" />
-
-		<link rel="stylesheet" type="text/css" href="stylesheets/general.css">
-		<link rel="shortcut icon" href="img/NWFAT_ico.ico" />
 
 </head>
 <body>
@@ -55,7 +54,7 @@
 					<img src="img/message.png"><a href="mailto:mary@nwfirstaidtraining.com" class="emailLink">Email NW First Aid Training</a>
 				</div>
 
-				<div style="display: inline-block; width: 350px; overflow: none;float: right;">
+				<div style="display: inline-block; width: 350px; overflow: none;float: right; display: none;">
 					<form>
 							<h4>Send a message to NW First Aid Training</h4>
 							<p style="margin-bottom: 1px;">First Name</p><input type="text" name="firstname" style="width: 200px; height: 25px;" autofocus="autofocus">
