--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-
-<html lang="en">
+<!--[if gt IE 8]><!--> 
+<html class="no-js" lang="en"> <!--<![endif]-->
 <head>
 
 	<title>NW First Aid Training</title>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <meta charset="utf-8">
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="On-site first aid training for students and employees. Training in Basic Life Support, CPR/AED, Pediatric First Aid, Bloodborne Pathogens, and Advance Cardiovascular Life Support; all levels of American Heart Association CPR Certifications.">
 	<meta name="keywords" content="first aid, first aid training, cpr, cpr course, cpr instruction, first aid instruction, pediatric, pediatric first aid, cpr training, aed, aed training, aed instruction, medical emergencies" />
 	<meta name="author" content="Ian McCunn" />
@@ -95,7 +94,9 @@
 			<p class="copyright">&copy; NW FIrst Aid Training 2014</p>
 		</div>
 
-	</div>	
+	</div>
+
+	<!-- JavaScript -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
