--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="On-site first aid training for students and employees. Training in Basic Life Support, CPR/AED, Pediatric First Aid, Bloodborne Pathogens, and Advance Cardiovascular Life Support; all levels of American Heart Association CPR Certifications.">
 	<meta name="keywords" content="first aid, first aid training, cpr, cpr course, cpr instruction, first aid instruction, pediatric, pediatric first aid, cpr training, aed, aed training, aed instruction" />
-	<meta name="author" content="Ian D. McCunn" />
 	<meta name="robots" content="nofollow" />
 
 	<link rel="stylesheet" type="text/css" href="stylesheets/general.css">
@@ -49,9 +48,9 @@
 
 			<div class="spec-inner">
 				<h1 class="pageTitle">Contact</h1>
-				<div style="display: inline-block; width: 350px;" >
-					<p>If you would like to schedule your next first aid class or have any questions, please feel free to send an email or send a message.</p>
-					<img src="img/message.png"><a href="mailto:mary@nwfirstaidtraining.com" class="emailLink">Email NW First Aid Training</a>
+				<div style="display: inline-block; width: 450px;" >
+					<p>If you have any questions or would like to schedule your next first aid class, please feel free to send us an email.</p>
+					<img src="img/message.png"><a href="mailto:mary@nwfirstaidtraining.com" class="emailLink">Email NW First Aid Training at mary@nwfirstaidtraining.com</a>
 				</div>
 
 				<div style="display: inline-block; width: 350px; overflow: none;float: right; display: none;">
@@ -77,7 +76,6 @@
         <div class="sitemapSection">
           <ul>About
             <li><a href="services.html">Services</a></li>
-            <li><a href="#">Instructors</a></li>
           </ul>
         </div>
 
