--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="On-site first aid training for students and employees. Training in Basic Life Support, CPR/AED, Pediatric First Aid, Bloodborne Pathogens, and Advance Cardiovascular Life Support; all levels of American Heart Association CPR Certifications.">
 	<meta name="keywords" content="first aid, first aid training, cpr, cpr course, cpr instruction, first aid instruction, pediatric, pediatric first aid, cpr training, aed, aed training, aed instruction, medical emergencies" />
-	<meta name="author" content="Ian McCunn" />
 	<meta name="robots" content="nofollow" />
 
 	<link rel="stylesheet" type="text/css" href="stylesheets/general.css">
@@ -31,7 +30,7 @@
 					<div class="brand-text">
 						<h1 class="title-brand">NW First Aid</h1>
 						<h1 class="title-brand">Training</h1>
-						<h4 class="sub-title-brand">We bring the classroom to you!<h4>
+						<h4 class="sub-title-brand">We bring the classroom to you! <h4>
 					</div>
 				</a>
 			</div>
@@ -50,11 +49,9 @@
 			<div class="spec-inner">
 
 				<!-- <h1 class="pageTitle"> Northwest First Aid Training</h1> -->
-				<p><strong>On-site first aid training for students, employers and employees.</strong> Training in Basic First Aid, CPR/Automated External Defibrillator, Pediatric First Aid and CPR, Bloodborne Pathogens, Home Safety and Disaster Preparedness. All CPR and AED training is taught to American Heart Association standards.</p>
+				<p><strong>On-site first aid training for students, employers and employees.</strong> Training in Basic First Aid, CPR/Automated External Defibrillator, Pediatric First Aid and CPR, Bloodborne Pathogens, Environmental Emergencies, Home Safety and Disaster Preparedness.</p>
+				<p>Providing a safe training environment during COVID-19.</p>
 
-				<div class="serv-left">
-					<h3>Student and Employee First Aid Programs</h3>
-				</div>
 				<div class="serv-left">
 					<h3>Occupational Safety and Health Administration (OSHA), US Department of Transportation (USDOT) and Standards of Training, Certification and Watchkeeping (STCW) approved.</h3>
 				</div>
@@ -71,7 +68,6 @@
         <div class="sitemapSection">
           <ul>About
             <li><a href="services.html">Services</a></li>
-            <li><a href="#">Instructors</a></li>
           </ul>
         </div>
         <div class="sitemapSection">
