--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
 				<section class="aService">
 					<h3 id="bfae">Basic First Aid-Emergency Care Basic Life Suport</h3>
 
-					<p>This 6-8 hour course covers all the basics: first aid, medical emergencies, trauma, pediatrics, infant/child/adult CPR(new 2010 standards), infant/child/adult airway obstructions, environment emergencies, blood-borne pathogens, home safety, disaster preparedness and the use of an AED (automatic external defibrillator). Included in this class is our full color reference manual for each student and a 2-year completion card. CPR is taught to American Heart Association standards and the course meets L&amp;I&apos;s requirements for business and industry. We are also able to give CEU for electricians and plumbers licensed in the State of Washington and Oregon, journeyman level or higher. All students get the opportunity to practice the skills they learn and build confidence to make a difference in an emergency.</p>
+					<p>This 6-8 hour course covers all the basics: first aid, medical emergencies, trauma, pediatrics, infant/child/adult CPR(new 2010 standards), infant/child/adult airway obstructions, environment emergencies, blood-borne pathogens, home safety, disaster preparedness and the use of an AED (automatic external defibrillator). Included in this class is our full color reference manual for each student and a 2-year completion card. CPR is taught to American Heart Association standards and the course meets L&amp;I&apos;s requirements for business and industry. We are also able to give CEU for electricians and plumbers licensed in the State of Washington and Oregon, journeyman level or higher. All students get the opportunity to practice the skills they learn and build confidence to make a difference in an emergency. This a great option for employers to meet Washington State L&amp;I requirements.</p>
 					<img src="img/caltime.png" class="calimage"><a href="contact.html" class="linkToSchedule">Schedule this class</a>
 				</section>
 
@@ -143,7 +143,6 @@
         <div class="sitemapSection">
           <ul>About
             <li><a href="services.html">Services</a></li>
-            <li><a href="#">Instructors</a></li>
           </ul>
         </div>
 
