--- a/404.html
+++ b/404.html
@@ -3,23 +3,21 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-
+<!--[if gt IE 8]><!--> 
+<html class="no-js" lang="en"> <!--<![endif]-->
 <head>
 
-	
+	<title>NW First Aid Training</title>
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <meta charset="utf-8">
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="On-site first aid training for students and employees. Training in Basic Life Support, CPR/AED, Pediatric First Aid, Bloodborne Pathogens, and Advance Cardiovascular Life Support; all levels of American Heart Association CPR Certifications.">
-	<meta name="keywords" content="first aid, first aid training, cpr, cpr course, cpr instruction, first aid instruction, pediatric, pediatric first aid, cpr training, aed, aed training, aed instruction" />
+	<meta name="keywords" content="first aid, first aid training, cpr, cpr course, cpr instruction, first aid instruction, pediatric, pediatric first aid, cpr training, aed, aed training, aed instruction, medical emergencies" />
 	<meta name="robots" content="nofollow" />
 
 	<link rel="stylesheet" type="text/css" href="stylesheets/general.css">
 	<link rel="shortcut icon" href="img/NWFAT_ico.ico" />
-
-	<title>NWFAT - About</title>
 
 </head>
 <body>
@@ -39,7 +37,7 @@
 			<div class="nav-bar">
 				<ul>
 					<li><a href="index.html">HOME</a></li>
-					<li><a href="about.html" class="active">ABOUT</a></li>
+					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="services.html">SERVICES</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
@@ -47,10 +45,7 @@
 		</div>
 
 		<div class="specific-content">
-
-			<div class="spec-inner">
-				<h1 class="pageTitle">About</h1>
-			</div>
+      <h3>Page not found.</h3>
 		</div>
 		<div class="footer">
 
@@ -62,7 +57,6 @@
             <li><a href="services.html">Services</a></li>
           </ul>
         </div>
-
         <div class="sitemapSection">
           <ul>External Resources
             <li><a href="http://www.heart.org/">American Heart Association</a></li>
@@ -75,25 +69,15 @@
 
       <div class="digitalPresence">
         <ul>
-          <li style=""><a href="https://www.facebook.com/NWFirstAidTraining/"><img src="img/FB-f-Logo__blue_29.png"></a></li>
+          <li style=""><a href="https://www.facebook.com/NWFirstAidTraining/" target="_blank"><img src="img/FB-f-Logo__blue_29.png"></a></li>
 
         </ul>
       </div>
 
-			<p class="copyright">&copy; NW FIrst Aid Training 2014</p>
+			<p class="copyright">&copy; NW FIrst Aid Training 2021</p>
 		</div>
 
-	</div>	
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-54040725-1', 'auto');
-	  ga('send', 'pageview');
-
-	</script>
+	</div>
 </body>
 
 </html>
